--- a/themes/petsta/layouts/_default/list.html
+++ b/themes/petsta/layouts/_default/list.html
@@ -1,4 +1,4 @@
-{{ partial "header.html . }}
+{{ partial "header.html" . }}
 
 {{ range .Data.Pages }}
 <h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
