Use delimit for tags

--- a/themes/petsta/layouts/_default/single.html
+++ b/themes/petsta/layouts/_default/single.html
@@ -7,6 +7,6 @@
 {{ .Content }}
 
 <hr/>
-Tags: {{ range .Params.tags }} {{ . }} {{ end }}
+Tags: {{ delimit .Params.tags ", " }}
 
 {{ partial "footer.html" . }}
