Make navigation bar horizontal

--- a/themes/petsta/layouts/partials/footer.html
+++ b/themes/petsta/layouts/partials/footer.html
@@ -1,5 +1,4 @@
-
-<p>&copy; {{ .Site.Params.author }}</p>
-
-</body>
+      <p>Copyright &copy; 2016 {{ .Site.Params.author }}</p>
+    </div>
+  </body>
 </html>
