--- a/themes/petsta/layouts/partials/header.html
+++ b/themes/petsta/layouts/partials/header.html
@@ -1,6 +1,16 @@
 <!DOCTYPE>
 <html>
-<head>
-<title>{{ .Title }}</title>
-</head>
-<body>
+  <head>
+    <title>{{ .Title }}</title>
+    <link rel="stylesheet" href="/css/main.css"/>
+  </head>
+  <body>
+    <div id="navigation_bar">
+      <ul>
+        <li><a href="dummy">Home</a></li>
+        <li><a class="active" href="dummy">Archive</a></li>
+        <li><a href="dummy">About</a></li>
+      </ul>
+    </div>
+    <div>
+
