--- a/themes/petsta/layouts/partials/header.html
+++ b/themes/petsta/layouts/partials/header.html
@@ -7,9 +7,9 @@
   <body>
     <div id="navigation_bar">
       <ul>
-        <li><a href="dummy">Home</a></li>
-        <li><a class="active" href="dummy">Archive</a></li>
-        <li><a href="dummy">About</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/post/">Archive</a></li>
+        <li><a href="/about/">About</a></li>
       </ul>
     </div>
     <div>
