--- a/themes/petsta/layouts/partials/header.html
+++ b/themes/petsta/layouts/partials/header.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="/css/main.css"/>
   </head>
   <body>
-    <div id="navigation_bar">
+    <div class="nav">
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/post/">Archive</a></li>
-        <li><a href="/about/">About</a></li>
+        <li><a href="/">Home</a>
+        <li><a href="/post/">Archive</a>
+        <li><a href="/categories/">Categories</a>
+        <li><a href="/about/">About</a>
       </ul>
     </div>
     <div>
