--- a/themes/petsta/static/css/main.css
+++ b/themes/petsta/static/css/main.css
@@ -1,34 +1,18 @@
-#navigation_bar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #f1f1f1;
-}
-
-#navigation_bar li {
-  float: left;
-}
-
-#navigation_bar a {
-  display: block;
-  color: #000;
-  padding: 14px 16px;
-  text-decoration: none;
-  text-align: center;
-}
-
-#navigation_bar a:hover {
-  background-color: #555;
-  color: white;
-}
-
-#navigation_bar .active {
-  background-color: #4CAF50;
-  color: white;
-}
-
 body {
+  /*padding: 1px;*/
   margin: 0;
-  padding: 0;
+}
+
+div.nav {
+  border-bottom: 1px solid black;
+}
+
+.nav ul {
+  margin: 0;
+  padding: 0.3em;
+}
+
+.nav li {
+  list-style: none;
+  display: inline;
 }
