--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -10,14 +10,17 @@
       <h3>{{ .Date.Format "2006-01-02" }}</h3>
     {{ end }}
     <p>
-      Tags:
+      tags:
       {{ range .Params.tags }}
+        <!-- Tags are disabled until the list template works.
         {{ $relLink := printf "/tags/%s" ( . | urlize ) }}
         {{ $tagPage := $.Site.GetPage $relLink }}
         <a href="{{ $tagPage.Permalink }}">{{ . }}</a>
+        -->
+        {{ . }}
       {{ end }}
     </p>
-    {{ .Content }}
+    <p>{{ .Content }}</p>
     <p>Copyright &copy; 2019 {{ .Site.Params.author }}</p>
   </body>
 </html>
