Add home and about link

--- a/blog/layouts/_default/list.html
+++ b/blog/layouts/_default/list.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="/css/main.css"/>
   </head>
   <body>
+    <a href="/">home</a>
+    <a href="/about">about</a>
     {{ range .Pages }}
     <h2>{{ .Title }}</h2>  
     {{ end }}
