--- a/blog/layouts/_default/list.html
+++ b/blog/layouts/_default/list.html
@@ -10,6 +10,7 @@
     {{ range .Pages }}
     <h2>{{ .Title }}</h2>  
     {{ end }}
+    <!-- TODO: set copyright correctly -->
     <p>Copyright &copy; 2019 {{ .Site.Params.author }}</p>
   </body>
 </html>
