--- a/blog/layouts/index.html
+++ b/blog/layouts/index.html
@@ -13,6 +13,11 @@
         <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
       {{ end }}
     {{ end }}
-    <p>Copyright &copy; 2019 {{ .Site.Params.author }}</p>
+    {{ range $.Site.Pages }}
+      {{ if (.Date) lt ($.Scratch.Get "copyDate") }}
+        {{ $.Scratch.Set "copyDate" .Date }}
+      {{ end }}
+    {{ end }}
+    <p>Copyright &copy; {{ ($.Scratch.Get "copyDate").Format "2006" }} {{ .Site.Params.author }}</p>
   </body>
 </html>
