--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -25,6 +25,6 @@
       {{ end }}
     </p>
     <p>{{ .Content }}</p>
-    <p>Copyright &copy; 2019 {{ .Site.Params.author }}</p>
+    <p>Copyright &copy; {{ .Date.Format "2006" }} {{ .Site.Params.author }}</p>
   </body>
 </html>
