Factor out footer

--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -8,5 +8,10 @@
     <a href="/about">about</a>
     {{ block "main" . }}
     {{ end }}
+    <p>
+      Copyright &copy;
+      {{ block "copyYear" . }}{{end}}
+      {{ $.Site.Params.author }}
+    </p>
   </body>
 </html>
