--- a/blog/layouts/_default/list.html
+++ b/blog/layouts/_default/list.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
   <h2>{{ .Title }}</h2>  
-  <!-- TODO: set copyright correctly -->
-  <p>Copyright &copy; 2019 {{ .Site.Params.author }}</p>
 {{ end }}
 
+{{ define "copyYear" }}
+  <!-- TODO: set copyright correctly -->
+  2019
+{{ end }}
