Center and fix width

--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -7,8 +7,10 @@
   <body>
     <a href="/">home</a>
     <a href="/about">about</a>
-    {{ block "main" . }}
-    {{ end }}
+    <div style="width:35rem;margin:auto;">
+      {{ block "main" . }}
+      {{ end }}
+    </div>
     <p>
       Copyright &copy;
       {{ block "copyYear" . }}{{end}}
