--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -5,9 +5,18 @@
     <link rel="stylesheet" href="/css/main.css"/>
   </head>
   <body>
-    <a href="/">home</a>
-    <a href="/about">about</a>
     <div style="width:35rem;margin:auto;">
+      <a href="/"><h1 class="title" style="text-align:center">{{ $.Site.Title }}</h1></a>
+      <div style="text-align:center;">
+        <a href="https://github.com/{{ $.Site.Params.github }}">github</a>
+        |
+        <a href="https://twitter.com/{{ $.Site.Params.twitter }}">twitter</a>
+        |
+        <a href="/about">about</a>
+      </div>
+      <div style="text-align:center;">
+        <h2>&middot; &middot; &middot;</h2>
+      </div>
       {{ block "main" . }}
       {{ end }}
     </div>
